Refactor dei test
Ora i test vecchi seguono il nuovo pattern del Fluent Builder